--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <!-- Firebase -->
+
+
+    <!-- ReactFire -->
+
     <title>React App</title>
   </head>
   <body>
