Added activities form and made friends work

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+  <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
+
   <link href="https://fonts.googleapis.com/css?family=Cabin|Catamaran|Muli|Open+Sans|Poppins|Raleway|Titillium+Web" rel="stylesheet">
 
   <link rel="shortcut icon" type="image/x-icon" href="sprout-logo-icon.png" />
