--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
   <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
 
-  <link href="https://fonts.googleapis.com/css?family=Cabin|Catamaran|Muli|Open+Sans|Poppins|Raleway|Titillium+Web" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cabin|Catamaran|Muli|Open+Sans|Poppins|Raleway|Titillium+Web|Mukta|Nunito|Khula" rel="stylesheet">
 
   <link rel="shortcut icon" type="image/x-icon" href="sprout-logo-icon.png" />
 
